
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
struct ipw2100_priv {int net_dev; } ;


 int EIO ;
 int IPW_AUX_HOST_GP_CNTRL_BIT_CLOCK_READY ;
 int IPW_AUX_HOST_GP_CNTRL_BIT_HOST_ALLOWS_STANDBY ;
 int IPW_AUX_HOST_GP_CNTRL_BIT_INIT_DONE ;
 int IPW_AUX_HOST_RESET_REG_PRINCETON_RESET ;
 int IPW_AUX_HOST_RESET_REG_SW_RESET ;
 int IPW_REG_GP_CNTRL ;
 int IPW_REG_RESET_REG ;
 int IPW_WAIT_CLOCK_STABILIZATION_DELAY ;
 int IPW_WAIT_RESET_ARC_COMPLETE_DELAY ;
 int read_register (int ,int ,int*) ;
 int udelay (int) ;
 int write_register (int ,int ,int) ;

__attribute__((used)) static int sw_reset_and_clock(struct ipw2100_priv *priv)
{
 int i;
 u32 r;


 write_register(priv->net_dev, IPW_REG_RESET_REG,
         IPW_AUX_HOST_RESET_REG_SW_RESET);


 for (i = 0; i < 1000; i++) {
  udelay(IPW_WAIT_RESET_ARC_COMPLETE_DELAY);


  read_register(priv->net_dev, IPW_REG_RESET_REG, &r);
  if (r & IPW_AUX_HOST_RESET_REG_PRINCETON_RESET)
   break;
 }

 if (i == 1000)
  return -EIO;



 write_register(priv->net_dev, IPW_REG_GP_CNTRL,
         IPW_AUX_HOST_GP_CNTRL_BIT_INIT_DONE);


 for (i = 0; i < 10000; i++) {
  udelay(IPW_WAIT_CLOCK_STABILIZATION_DELAY * 4);


  read_register(priv->net_dev, IPW_REG_GP_CNTRL, &r);
  if (r & IPW_AUX_HOST_GP_CNTRL_BIT_CLOCK_READY)
   break;
 }

 if (i == 10000)
  return -EIO;


 read_register(priv->net_dev, IPW_REG_GP_CNTRL, &r);
 write_register(priv->net_dev, IPW_REG_GP_CNTRL,
         r | IPW_AUX_HOST_GP_CNTRL_BIT_HOST_ALLOWS_STANDBY);

 return 0;
}
